--- a/apps/file-index/package.json
+++ b/apps/file-index/package.json
@@ -24,6 +24,7 @@
     "@prisma/client": "6.5.0",
     "bullmq": "^5.47.1",
     "hbs": "^4.2.0",
+    "node-html-parser": "^7.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
