--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,12 +1,27 @@
 name: "Movie library"
 
 services:
+  fileindex:
+    build:
+      context: ../apps/file-index/
+      dockerfile: .Dockerfile
+    environment:
+      DATABASE_URL: "postgresql://movie_user:movie_password@postgres:5432/movie_library?schema=public"
+      REDIS_URL: "redis:6379"
+    ports:
+      - "3000:3000"
+
   httpdirfs:
     build:
+      context: .
       dockerfile: httpdirfs.Dockerfile
     privileged: true
     devices:
       - /dev/fuse
+    environment:
+      INDEX_URL: "http://fileindex:3000/d/"
+    depends_on:
+      - fileindex
 
   postgres:
     image: postgres:latest
