--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -11,17 +11,17 @@ services:
     ports:
       - "3000:3000"
 
-  httpdirfs:
-    build:
-      context: .
-      dockerfile: httpdirfs.Dockerfile
-    privileged: true
-    devices:
-      - /dev/fuse
-    environment:
-      INDEX_URL: "http://fileindex:3000/d/"
-    depends_on:
-      - fileindex
+  # httpdirfs:
+  #   build:
+  #     context: .
+  #     dockerfile: httpdirfs.Dockerfile
+  #   privileged: true
+  #   devices:
+  #     - /dev/fuse
+  #   environment:
+  #     INDEX_URL: "http://fileindex:3000/i/"
+  #   depends_on:
+  #     - fileindex
 
   postgres:
     image: postgres:latest
@@ -33,11 +33,22 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-
   redis:
     image: redis:latest
     ports:
       - "6379:6379"
+
+  rclone:
+    image: mumiehub/rclone-mount:latest
+    environment:
+      RemotePath: "index:/"
+      MountPoint: "/test"
+    privileged: true
+    devices:
+      - /dev/fuse
+    volumes:
+      - ./rclone:/config
+    platform: linux/amd64
 
 volumes:
   postgres_data:
