--- a/apps/file-index/package.json
+++ b/apps/file-index/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "author": "",
   "private": true,
+  "packageManager": "yarn@4.6.0",
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
