--- a/apps/file-index/package.json
+++ b/apps/file-index/package.json
@@ -25,6 +25,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "6.5.0",
     "bullmq": "^5.47.1",
+    "class-validator": "^0.14.1",
     "date-fns": "^4.1.0",
     "hbs": "^4.2.0",
     "node-html-parser": "^7.0.1",
