--- a/apps/file-index/package.json
+++ b/apps/file-index/package.json
@@ -29,6 +29,7 @@
     "date-fns": "^4.1.0",
     "hbs": "^4.2.0",
     "node-html-parser": "^7.0.1",
+    "puppeteer-core": "^24.7.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
