--- a/apps/file-index/package.json
+++ b/apps/file-index/package.json
@@ -28,6 +28,7 @@
     "class-validator": "^0.14.1",
     "date-fns": "^4.1.0",
     "hbs": "^4.2.0",
+    "lodash": "^4.17.21",
     "node-html-parser": "^7.0.1",
     "puppeteer-core": "^24.7.2",
     "reflect-metadata": "^0.2.2",
@@ -42,6 +43,7 @@
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
     "@types/express": "^5.0.0",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
