add github workflow

--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -2,6 +2,7 @@ name: "Movie library"
 
 services:
   fileindex:
+    platform: linux/amd64
     build:
       context: ../apps/file-index/
       dockerfile: .Dockerfile
