--- a/.github/workflows/build-and-publish-file-index-docker.yml
+++ b/.github/workflows/build-and-publish-file-index-docker.yml
@@ -36,7 +36,7 @@ jobs:
         id: push
         uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
         with:
-          context: ./apps/file-index
+          context: apps/file-index/
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
