--- a/apps/file-index/Dockerfile
+++ b/apps/file-index/Dockerfile
@@ -1,15 +1,23 @@
 FROM node:23-slim
+
+WORKDIR /
+RUN apt update
+RUN apt install -y --no-install-recommends ca-certificates fonts-liberation gconf-service libasound2 libatk-bridge2.0-0 libatk1.0-0 \
+  libc6 libcairo2 libcups2 libdbus-1-3 libdrm2 libexpat1 libfontconfig1 libgbm1 libgcc1 libgconf-2-4 libgdk-pixbuf2.0-0 libglib2.0-0 libgtk-3-0 \
+  libnspr4 libnss3 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 libxdamage1 libxext6 \
+  libxfixes3 libxi6 libxrandr2 libxrender1 libxshmfence1 libxss1 libxtst6 lsb-release wget xdg-utils
+
+RUN wget -q --show-progress 'https://playwright.azureedge.net/builds/chromium/1151/chromium-linux-arm64.zip' -O chromium-linux-arm64.zip
+RUN unzip chromium-linux-arm64.zip
+RUN rm -f ./chromium-linux-arm64.zip
+
 WORKDIR /app
 COPY package.json .
 RUN npm install
+
 COPY . .
-RUN apt-get update && apt-get install curl gnupg -y \
-  && curl --location --silent https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - \
-  && sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list' \
-  && apt-get update \
-  && apt-get install google-chrome-stable -y --no-install-recommends \
-  && rm -rf /var/lib/apt/lists/*
 RUN npm run prisma:generate
 RUN npm run build
+
 EXPOSE 3000
 CMD ["npm", "run", "start:prod"]
