--- a/infra/docker-compose.prod.yml
+++ b/infra/docker-compose.prod.yml
@@ -1,13 +1,8 @@
-name: "Movie library"
-
 services:
   fileindex:
-    build:
-      context: ../apps/file-index/
-      dockerfile: Dockerfile
+    image: ghcr.io/dmytrobaida/movie-library:main
     environment:
       DATABASE_URL: "postgresql://movie_user:movie_password@postgres:5432/movie_library?schema=public"
-      REDIS_URL: "redis:6379"
       ENABLE_SYNC: "false"
     ports:
       - "3000:3000"
@@ -18,15 +13,8 @@ services:
       POSTGRES_USER: movie_user
       POSTGRES_PASSWORD: movie_password
       POSTGRES_DB: movie_library
-    ports:
-      - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-
-  redis:
-    image: redis:latest
-    ports:
-      - "6379:6379"
 
 volumes:
   postgres_data:
