--- a/apps/file-index/Dockerfile
+++ b/apps/file-index/Dockerfile
@@ -6,9 +6,7 @@ RUN apt update && apt install -y --no-install-recommends ca-certificates fonts-l
   libnspr4 libnss3 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 libxdamage1 libxext6 \
   libxfixes3 libxi6 libxrandr2 libxrender1 libxshmfence1 libxss1 libxtst6 lsb-release wget xdg-utils unzip
 
-RUN wget -q --show-progress 'https://playwright.azureedge.net/builds/chromium/1151/chromium-linux-arm64.zip' -O chromium-linux-arm64.zip
-RUN unzip chromium-linux-arm64.zip
-RUN rm -f ./chromium-linux-arm64.zip
+RUN wget -q --show-progress 'https://playwright.azureedge.net/builds/chromium/1151/chromium-linux-arm64.zip' -O chromium-linux-arm64.zip && unzip chromium-linux-arm64.zip && rm -f ./chromium-linux-arm64.zip
 
 WORKDIR /app
 RUN corepack enable
