--- a/infra/docker-compose.local.yml
+++ b/infra/docker-compose.local.yml
@@ -28,5 +28,11 @@ services:
     ports:
       - "6379:6379"
 
+  stremio:
+    image: stremio/server:latest
+    ports:
+      - 11470:11470
+      - 12470:12470
+
 volumes:
   postgres_data:
