--- a/infra/docker-compose.prod.yml
+++ b/infra/docker-compose.prod.yml
@@ -16,5 +16,10 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
+  stremio:
+    image: stremio/server:latest
+    ports:
+      - 11470:11470
+
 volumes:
   postgres_data:
