--- a/apps/file-index/package.json
+++ b/apps/file-index/package.json
@@ -18,15 +18,20 @@
     "prisma:generate": "prisma generate"
   },
   "dependencies": {
+    "@adminjs/express": "^6.1.1",
+    "@adminjs/prisma": "^5.0.3",
     "@nestjs/bullmq": "^11.0.2",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "6.5.0",
+    "adminjs": "^7.8.15",
     "bullmq": "^5.47.1",
     "class-validator": "^0.14.1",
     "date-fns": "^4.1.0",
+    "express-formidable": "^1.2.0",
+    "express-session": "^1.18.1",
     "hbs": "^4.2.0",
     "lodash": "^4.17.21",
     "node-html-parser": "^7.0.1",
@@ -42,7 +47,9 @@
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
-    "@types/express": "^5.0.0",
+    "@types/express": "^5.0.1",
+    "@types/express-formidable": "^1",
+    "@types/express-session": "^1",
     "@types/lodash": "^4.17.16",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
