--- a/infra/docker-compose.local.yml
+++ b/infra/docker-compose.local.yml
@@ -7,7 +7,7 @@ services:
       dockerfile: Dockerfile
     environment:
       DATABASE_URL: "postgresql://movie_user:movie_password@postgres:5432/movie_library?schema=public"
-      REDIS_URL: "redis:6379"
+      REDIS_URL: "redis://redis:6379"
       ENABLE_SYNC: "false"
     ports:
       - "3000:3000"
