--- a/apps/file-index/package.json
+++ b/apps/file-index/package.json
@@ -25,6 +25,8 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-socket.io": "^11.1.0",
+    "@nestjs/websockets": "^11.1.0",
     "@prisma/client": "6.5.0",
     "adminjs": "^7.8.15",
     "bullmq": "^5.47.1",
@@ -36,8 +38,12 @@
     "lodash": "^4.17.21",
     "node-html-parser": "^7.0.1",
     "puppeteer-core": "^24.7.2",
+    "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
+    "winston": "^3.17.0",
+    "winston-transport": "^4.9.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
