--- a/apps/file-index/package.json
+++ b/apps/file-index/package.json
@@ -31,6 +31,7 @@
     "adminjs": "^7.8.15",
     "bullmq": "^5.47.1",
     "class-validator": "^0.14.1",
+    "css-what": "^6.2.0",
     "date-fns": "^4.1.0",
     "express-formidable": "^1.2.0",
     "express-session": "^1.18.1",
